--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                                         <span>Sept, 2020 - Dec, 2020</span>
                                         <h3>Web Development Team - Core Member</h3>
                                         <h4>Medi-Caps Incubation and Innovation Center (MIIC)</h4>
-                                        <p>I have designed the website of Medi-Caps Incubation and Innovation Center (MIIC). I have participated in several Workshops conducted by Medi-Caps Incubation and Innovation Center (MIIC) on topics like Motion Graphics and PhotoShop</p>
+                                        <p>I have designed the website of Medi-Caps Incubation and Innovation Center (MIIC). I have participated in several Workshops conducted by Medi-Caps Incubation and Innovation Center (MIIC) on topics like Motion Graphics and PhotoShop.</p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM End  -->
