--- a/index.html
+++ b/index.html
@@ -429,8 +429,7 @@
                                         <h3>CEO & Co-Founder</h3>
                                         <h4>EFarm, India</h4>
                                         <p>EFarm is a Start-up which in Incubated under Medi-Caps Innovation and
-                                            Incubation Center(MIIC). EFarm is platform which we connect to farmers
-                                            digitally. We sell Farming Products such as Fertilizers, Growth Boosters,
+                                            Incubation Center(MIIC). EFarm is platform which we connect to farmers digitally. We sell Farming Products such as Fertilizers, Growth Boosters,
                                             etc </p>
                                     </div>
                                 </div>
