--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                         <span>June, 2020 - Present</span>
                                         <h3>CEO & Co-Founder</h3>
                                         <h4>EFarm, India</h4>
-                                        <p>EFarm is a Start-up which in Incubated under Medi-Caps Innovation and Incubation Center(MIIC). EFarm is platform where we connect to farmers digitally. We sell Farming Products such as Fertilizers, Growth Boosters.</p>
+                                        <p>EFarm is a Start-up which in Incubated under Medi-Caps Innovation and Incubation Center(MIIC). EFarm is platform where we connect to farmers digitally. We sell Farming Products such as Fertilizers and Growth Boosters.</p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM END  -->
