--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                         <span>June, 2020 - Present</span>
                                         <h3>CEO & Co-Founder</h3>
                                         <h4>EFarm, India</h4>
-                                        <p>EFarm is a Start-up that is Incubated under Medi-Caps Innovation and Incubation Center(MIIC). EFarm is platform where we connect to farmers digitally. We sell Farming products such as Fertilizers and Growth Boosters. We also sell all types of Flours for cooking.</p>
+                                        <p>EFarm is a Start-up that is Incubated under Medi-Caps Innovation and Incubation Center(MIIC). EFarm is a platform where we connect to farmers digitally. We sell Farming products such as Fertilizers and Growth Boosters. We also sell all types of Flours for cooking.</p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM END  -->
