--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                                         <span>Oct, 2020 - Present</span>
                                         <h3>Web Development Team - Core Member</h3>
                                         <h4>Student Technical And Innovation Cell (STIC)</h4>
-                                        <p>I am a core member of the University's Biggest Technical Cell where I have conducted a few workshop on HTML5, CSS3, and JavaScript. I have created a website for a University Event of STIC called as IONOS - 2020.</p>
+                                        <p>I am a core member of the University's Biggest Technical Cell where I have conducted a few workshops on HTML5, CSS3, and JavaScript. I have created a website for a University Event of STIC called as IONOS - 2020.</p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM End  -->
