--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="about-info">
                     <p> <span> Hey Peeps! I am Archit Badjatya</span>, <span>A Front - End Web Developer</span> and I am
                         residing in Indore, Madhya Pradesh. I am pursuing a Bachelor of Computer Science and Engineering
-                        specialization in Artificial Intelligence and currently I am in Second year. Owing to my
+                        specialization in Artificial Intelligence and currently, I am in Second year. Owing to my
                         education, my inclination has been towards software development, mainly Full Stack Web
                         Development, Data Structures and Algorithms, and Competitive Programming. My belief is in
                         maximizing the spreading of knowledge, which has led me in contributing to many open source
