--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         maximizing the spreading of knowledge, which has led me in contributing to many open source
                         projects.</p>
 
-                    <p>I've also a keen interest in Rekki and Meditation. Other than that, I can be found Mentoring,
+                    <p>I've also a keen interest in Reiki and Meditation. Other than that, I can be found Mentoring,
                         Teaching, Doing Photography, Exploring nature, Travelling, Trekking, Learning new things, and
                         Spending time with my family are my leisure interests.</p>
                     <a href="./resources/resume/ArchitBadjatya.pdf" class="btn-1 outer-shadow hover-in-shadow">Download
