--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
                     <p>I've also a keen interest in Reiki and Meditation. Other than that, I can be found Mentoring,
                         Teaching, Doing Photography, Exploring nature, Travelling, Trekking, Learning new things, and
-                        Spending time with my family are my leisure interests.</p>
+                        spending time with my family are my leisure interests.</p>
                     <a href="./resources/resume/ArchitBadjatya.pdf" class="btn-1 outer-shadow hover-in-shadow">Download
                         CV</a>
                     <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
