--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <div class="row">
                         <!-- SKILLS ITEM START  -->
                         <div class="skill-item">
-                            <p>Html</p>
+                            <p>HTML</p>
                             <div class="progress inner-shadow">
                                 <div class="progress-bar" style="width: calc(85% - 14px);">
                                     <span>85%</span>
