--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
                         <!-- SKILLS ITEM START  -->
                         <div class="skill-item">
-                            <p>Bootstrap</p>
+                            <p>BootStrap</p>
                             <div class="progress inner-shadow">
                                 <div class="progress-bar" style="width: calc(70% - 14px);">
                                     <span>70%</span>
