--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
                         <!-- SKILLS ITEM START  -->
                         <div class="skill-item">
-                            <p>Wordpress</p>
+                            <p>WordPress</p>
                             <div class="progress inner-shadow">
                                 <div class="progress-bar" style="width: calc(70% - 14px);">
                                     <span>70%</span>
