--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
                         <!-- SKILLS ITEM START  -->
                         <div class="skill-item">
-                            <p>Adobe Photoshop</p>
+                            <p>Adobe PhotoShop</p>
                             <div class="progress inner-shadow">
                                 <div class="progress-bar" style="width: calc(70% - 14px);">
                                     <span>70%</span>
