--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
                     <p> <span> Hey Peeps! I am Archit Badjatya</span>, <span>A Front - End Web Developer</span> and I am residing in Indore, Madhya Pradesh. I am pursuing a Bachelor of Computer Science and Engineering specialization in Artificial Intelligence and currently, I am in the second year. Owing to my education, my inclination has been towards software development, mainly Full Stack Web Development, Data Structures and Algorithms, and Competitive Programming. My belief is in maximizing the spreading of knowledge, which has led me in contributing to many open source projects.</p>
 
                     <p>I've also a keen interest in Reiki and Meditation. Other than that, I can be found Mentoring, Teaching, Doing Photography, Exploring nature, Travelling, Trekking, Learning new things, and spending time with my family are my leisure interests.</p>
-                    <a href="./resources/resume/ArchitBadjatya.pdf" class="btn-1 outer-shadow hover-in-shadow">Download
-                        CV</a>
+                    <a href="./resources/resume/ArchitBadjatya.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
                     <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
                 </div>
             </div>
