--- a/index.html
+++ b/index.html
@@ -349,8 +349,7 @@
                                         <span>March, 2021 - Present</span>
                                         <h3>Head Web Development Team</h3>
                                         <h4>Medi-Caps Incubation and Innovation Center (MIIC)</h4>
-                                        <p>I have Created 4 pages for The Website of Medi-Caps Incubation and Innovation Center (MIIC). I have mentored several Students through out my Journey in MIIC. I have also taken several Workshops on Topics like Hacktoberfest,
-                                            Html5, CSS3, JavaScript, Bootstap and Git & Github</p>
+                                        <p>I have Created 4 pages for The Website of Medi-Caps Incubation and Innovation Center (MIIC). I have mentored several Students through out my Journey in MIIC. I have also taken several Workshops on Topics like Hacktoberfest, Html5, CSS3, JavaScript, Bootstap and Git & Github</p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM End  -->
