--- a/index.html
+++ b/index.html
@@ -507,10 +507,7 @@
                       <h4>Medi-Caps Incubation and Innovation Center (MIIC)</h4>
                       <p>
                         I have designed the website of Medi-Caps Incubation and
-                        Innovation Center (MIIC). I have participated in several
-                        workshops conducted by Medi-Caps Incubation and
-                        Innovation Center (MIIC) on topics like Motion Graphics
-                        and PhotoShop.
+                        Innovation Center (MIIC). 
                       </p>
                     </div>
                   </div>
