--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                       <h4>Medi-Caps Incubation and Innovation Center (MIIC)</h4>
                       <p>
                         I have designed the website of Medi-Caps Incubation and
-                        Innovation Center (MIIC). I have participated in a Technical event called Aarambh 2020. It is a hackathon in which I have created a Website, CSS Animation and
+                        Innovation Center (MIIC). I have participated in a Technical event called Aarambh 2020. It is a hackathon in which I have created a Website, CSS Animation and an Admin Panel.
                       </p>
                     </div>
                   </div>
