--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
                       <li>Client - <span>xyz</span></li>
                       <li>Tools - <span>Html,Css,JavaScript,Jquery</span></li>
                       <li>
-                        Web - <span><a href="#">www.domain.com</a></span>
+                        Web - <span><a href="">www.domain.com</a></span>
                       </li>
                     </ul>
                   </div>
