--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
                       <li>Client - <span>xyz</span></li>
                       <li>Tools - <span>Html,Css,JavaScript,Jquery</span></li>
                       <li>
-                        Web - <span><a href="https://badjatya.github.io/Random-Joke-js/"></a></span>
+                        Web - <span><a href="https://badjatya.github.io/Random-Joke-js/">https://badjatya.github.io/Random-Joke-js/</a></span>
                       </li>
                     </ul>
                   </div>
