Project Content Update

--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
                       <li>Client - <span>xyz</span></li>
                       <li>Tools - <span>Html,Css,JavaScript,Jquery</span></li>
                       <li>
-                        Web - <span><a href="https://badjatya.github.io/omni-food/">https://badjatya.github.io/omni-food/</a></span>
+                        Web - <span><a href="https://badjatya.github.io/omni-food/">badjatya.github.io/omni-food/</a></span>
                       </li>
                     </ul>
                   </div>
