Project Content Update

--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
                       <li>Client - <span>xyz</span></li>
                       <li>Tools - <span>Html,Css,JavaScript</span></li>
                       <li>
-                        Web - <span><a href="https://badjatya.github.io/MIIC/">https://badjatya.github.io/MIIC/</a></span>
+                        Web - <span><a href="https://badjatya.github.io/MIIC/">badjatya.github.io/MIIC/</a></span>
                       </li>
                     </ul>
                   </div>
