--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
                     <ul>
                       <li>Date - <span>2020</span></li>
                       <li>Client - <span>xyz</span></li>
-                      <li>Tools - <span>Html,CSS and JavaScript</span></li>
+                      <li>Tools - <span>HTML,CSS and JavaScript</span></li>
                       <li>
                         Web - <span><a href="https://badjatya.github.io/Random-Joke-js/">badjatya.github.io/Random-Joke-js/</a></span>
                       </li>
