--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
                     <ul>
                       <li>Date - <span>2020</span></li>
                       <li>Client - <span>xyz</span></li>
-                      <li>Tools - <span>Html,Css,JavaScript Jquery</span></li>
+                      <li>Tools - <span>Html,Css,JavaScript and Jquery</span></li>
                       <li>
                         Web - <span><a href="https://badjatya.github.io/omni-food/">badjatya.github.io/omni-food/</a></span>
                       </li>
