Project Content Update

--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
                     <ul>
                       <li>Date - <span>2020</span></li>
                       <li>Client - <span>xyz</span></li>
-                      <li>Tools - <span>Html,Css,JavaScript</span></li>
+                      <li>Tools - <span>Html,Css,JavaScript, BootStrap</span></li>
                       <li>
                         Web - <span><a href="https://badjatya.github.io/MIIC/">badjatya.github.io/MIIC/</a></span>
                       </li>
