--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               <span> Hey Peeps! I am Archit Badjatya</span>,
               <span>A Front - End Web Developer</span> and I am residing in
               Indore, Madhya Pradesh. I am pursuing a Bachelor of Computer
-              Science Engineering specialization in Artificial Intelligence
+              Science Engineering(CSE) specialization in Artificial Intelligence
               and currently, I am in the second year. Owing to my education, my
               inclination has been towards software development, mainly Full
               Stack Web Development, Data Structures and Algorithms, and
