--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               <span>A Front - End Web Developer</span> and I am residing in
               Indore, Madhya Pradesh. I am pursuing a Bachelor of Computer
               Science Engineering (CSE) specialization in Artificial Intelligence
-              and currently, I am in the second year 4th. Owing to my education, my
+              and currently, I am in the second year 4th sem. Owing to my education, my
               inclination has been towards software development, mainly Full
               Stack Web Development, Data Structures and Algorithms, and
               Competitive Programming. My belief is in maximizing the spreading
