--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
               Science Engineering (CSE) specialization in Artificial Intelligence
               and currently, I am in the second year (4th semester). Owing to my education, my
               inclination has been towards software development, mainly Full
-              Stack Web Development, Mobile development, Data Structures and Algorithms, and
+              Stack Web Development, Mobile Development, Data Structures and Algorithms, and
               Competitive Programming. My belief is in maximizing the spreading
               of knowledge, which has led me in contributing to many open source
               projects.
