About Content Update

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           <div class="about-info">
             <p>
               <span> Hey Peeps! I am Archit Badjatya</span>,
-              <span>A Front - End Web Developer</span> and I residing in
+              <span>A Front - End Web Developer</span> and  residing in
               Indore, Madhya Pradesh. I am pursuing a Bachelor of Computer
               Science Engineering (CSE) specialization in Artificial Intelligence
               and currently, I am in the second year (4th semester). Owing to my education, my
