About Content Update

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
             <p>
               I've also a keen interest in Reiki and Meditation. Other than
-              that, I can be found Mentoring, Teaching, Doing Photography,
+              that, You will find me Mentoring, Teaching, Doing Photography,
               Exploring nature, Travelling, Trekking, Learning new things, and
               spending time with my family are my leisure interests.
             </p>
