About content Update

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                         Incubation and Innovation Center (MIIC). I have mentored
                         several Students through out my Journey in MIIC. I have
                         also taken several Workshops on Topics like
-                        Hacktoberfest, Html5, CSS3, JavaScript, Bootstap and Git
+                        Hacktoberfest, Html5, CSS3, JavaScript, BootStap and Git
                         & Github
                       </p>
                     </div>
