About content Update

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                         several Students throughout my Journey in MIIC. I have
                         also taken several Workshops on Topics like
                         Hacktoberfest, Html5, CSS3, JavaScript, BootStrap and Git
-                        & Github
+                        & Github.
                       </p>
                     </div>
                   </div>
