--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                       <h3>Asst. Head Web Development Team</h3>
                       <h4>Medi-Caps Incubation and Innovation Center (MIIC)</h4>
                       <p>
-                        I have created 4 pages for The Website of Medi-Caps
+                        I have created four pages for The Website of Medi-Caps
                         Incubation and Innovation Center (MIIC). I have mentored
                         several Students throughout my Journey in MIIC. I have
                         also taken several Workshops on Topics like
