--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                       <h3>Web Development Intern</h3>
                       <h4>Infonium</h4>
                       <p>
-                        I have created 4 pages for The Website of Medi-Caps
+                        I have created four pages for The Website of Medi-Caps
                         Incubation and Innovation Center (MIIC). I have mentored
                         several Students throughout my Journey in MIIC. I have
                         also taken several Workshops on Topics like
