--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                       <h4>Student Technical And Innovation Cell (STIC)</h4>
                       <p>
                         I am a core member of the University's Biggest Technical
-                        Cell where I have conducted a few workshops on HTML5,
+                        Cell, where I have conducted a few workshops on HTML5,
                         CSS3, and JavaScript. I have created a website for a
                         University Event of STIC called IONOS - 2020.
                       </p>
