--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                       <h3>CEO & Co-Founder</h3>
                       <h4>EFarm, India</h4>
                       <p>
-                        EFarm is a Start-up that is Incubated under Medi-Caps
+                        EFarm is a Start-up incubated under Medi-Caps
                         Innovation and Incubation Center(MIIC). EFarm is a
                         platform where we connect to farmers digitally. We sell
                         Farming products such as Fertilizers and Growth
