--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                       <h4>Lions Junior College, Manawar</h4>
                       <p>
                         I had completed my Secondary (X) schooling at Lion's
-                        Junior College Manawar, Dhar. With a CGPA of 7.80,
+                        Junior College Manawar, Dhar. With a CGPA of 7.80.
                         Having the position of School captain in 2016.
                       </p>
                     </div>
