--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                       <p>
                         I had completed my Secondary (X) schooling at Lion's
                         Junior College Manawar, Dhar. With a CGPA of 7.80.
-                        Having the position of School captain in 2016.
+                        having the position of School captain in 2016.
                       </p>
                     </div>
                   </div>
