--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="home-text">
             <p>Hello</p>
             <h2>I'm Archit Badjatya</h2>
-            <h1>Full Web Developer</h1>
+            <h1>Full Stack Web Developer</h1>
             <a
               href="#about"
               class="link-item btn-1 outer-shadow hover-in-shadow"
