Skills item added

--- a/index.html
+++ b/index.html
@@ -429,6 +429,17 @@
                 </div>
               </div>
               <!-- SKILLS ITEM ENDS  -->
+
+              <!-- SKILLS ITEM START  -->
+              <div class="skill-item">
+                <p>Canva</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(70% - 14px)">
+                    <span>70%</span>
+                  </div>
+                </div>
+              </div>
+              <!-- SKILLS ITEM ENDS  -->
             </div>
           </div>
         </div>
