--- a/index.html
+++ b/index.html
@@ -399,6 +399,17 @@
 
               <!-- SKILLS ITEM START  -->
               <div class="skill-item">
+                <p>SQL</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(80% - 14px)">
+                    <span>80%</span>
+                  </div>
+                </div>
+              </div>
+              <!-- SKILLS ITEM ENDS  -->
+
+              <!-- SKILLS ITEM START  -->
+              <div class="skill-item">
                 <p>Git & Github</p>
                 <div class="progress inner-shadow">
                   <div class="progress-bar" style="width: calc(90% - 14px)">
@@ -434,8 +445,8 @@
               <div class="skill-item">
                 <p>Canva</p>
                 <div class="progress inner-shadow">
-                  <div class="progress-bar" style="width: calc(70% - 14px)">
-                    <span>70%</span>
+                  <div class="progress-bar" style="width: calc(80% - 14px)">
+                    <span>80%</span>
                   </div>
                 </div>
               </div>
