--- a/index.html
+++ b/index.html
@@ -1001,7 +1001,7 @@
             <div class="contact-item-inner outer-shadow">
               <i class="fas fa-map-marker-alt"></i>
               <span>Address</span>
-              <p>Jain complex, Manawar- 454446</p>
+              <p>Lorem ipsum dolor sit.</p>
             </div>
           </div>
           <!-- contact item end  -->
